--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  uni: Udacity test for uni
+  year: June, 2014 &mdash; January, 2015 test for year
   # awards:
-  # summary:
+  # summary:  test for summary
