--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
 - company: Self Employed
   position: Surftocat
   duration: Life
-  summary: I only live to get radical.
+  summary: I live with my heart want.
 
 # Job Title
 - company: Conway Meats
